kiosk: Reset virtual keyboard after app profile load

Sign-in profile's IME engine is disabled after app profile
finishes loading. As a result, existing virtual keyboard
built from sign-in profile will stop functioning. This is
usually fine since the virtual keyboard will be reset
after app session starts (session state changes to ACTIVE).
However, it would be a problem when virtual keyboard is used
before session state change such as in the kiosk network config
case. The CL fixes the problem by resetting the virtual keyboard
after app profile is loaded to cover the time after app profile
is loaded but before app session starts.

BUG=748432

Change-Id: I67b332bb2331dc818c0891f1753cddf4a55b1e4f
Reviewed-on: https://chromium-review.googlesource.com/608837
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493121}
Former-commit-id: fbf724f01d4569314087d0bf8a0a9b46dc883087